--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 class="main-title">Вывести в консоль произвение чисел</h1>
+    <p class="text"></p>
 
     <script src="js/script.js"></script>
 </body>
